Track and report index information via proper objects